WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208372
Regression
r257612
: Windows build broken
https://bugs.webkit.org/show_bug.cgi?id=208372
Summary
Regression r257612: Windows build broken
Aakash Jain
Reported
2020-02-28 04:53:53 PST
Windows build seems to be broken by
r257612
. e.g.: build\Source\WebCore\platform\graphics\InbandGenericCue.cpp(93): error C2220: the following warning is treated as an error [WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] build\Source\WebCore\platform\graphics\InbandGenericCue.cpp(93): warning C4701: potentially uninitialized local variable 'align' used [WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] build\Source\WebCore\platform\graphics\InbandGenericCue.cpp(93): warning C4703: potentially uninitialized local pointer variable 'align' used [WebKitBuild\Release\Source\WebCore\WebCore.vcxproj]
r257611
passed in
https://build.webkit.org/builders/Apple%20Win%2010%20Release%20%28Build%29/builds/11123
r257612
failed in
https://build.webkit.org/builders/Apple%20Win%2010%20Release%20%28Build%29/builds/11124
EWS also indicated this failure in the corresponding bug
https://bugs.webkit.org/show_bug.cgi?id=208080
Attachments
Patch
(1.44 KB, patch)
2020-02-28 09:23 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-28 04:55:01 PST
<
rdar://problem/59885001
>
Eric Carlson
Comment 2
2020-02-28 09:23:20 PST
Created
attachment 391984
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-28 10:14:12 PST
Comment on
attachment 391984
[details]
Patch Clearing flags on attachment: 391984 Committed
r257641
: <
https://trac.webkit.org/changeset/257641
>
WebKit Commit Bot
Comment 4
2020-02-28 10:14:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug