Regression r257612: Windows build broken https://bugs.webkit.org/show_bug.cgi?id=208372 <rdar://problem/59885001>

Unreviewed Windows build fix.


* platform/graphics/InbandGenericCue.cpp:
(WebCore::InbandGenericCue::toJSONString const):


Canonical link: https://commits.webkit.org/221310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257641 268f45cc-cd09-0410-ab3c-d52691b4dbfc